--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ os:
     - linux
     - osx
 install:
-    - ./scripts/dependencies-linux.sh
+    - UNAME=$(uname | tr '[:upper:]' '[:lower:]')
+    - ./scripts/dependencies-${UNAME}.sh
+    - ./scripts/dependencies.sh
 script:
     - echo "Hello World!"
 
